kubernetes/hidden/deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hidden
  labels:
    app: hidden

spec:
  replicas: 1
  selector:
    matchLabels:
      app: hidden
  template:
    metadata:
      labels:
        app: hidden
    spec:
      containers:
        - name: hidden
          image: containous/whoami
          ports:
            - name: web
              containerPort: 80
