kubernetes/hidden/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hidden
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: hidden
