kubernetes/hidden/ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hidden-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hidden.zzd.ai`)
      kind: Rule
      services:
        - name: hidden
          port: 80
      middlewares:
        - name: https-redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hidden-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hidden.zzd.ai`)
      kind: Rule
      services:
        - name: hidden
          port: 80
      middlewares:
        - name: forward-auth
  tls:
    certResolver: default
